<resources>
    <string name="app_name">轻课</string>
    <string name="zhihu_daily">我的通知</string>
    <string name="guokr_handpick">我的讨论</string>
    <string name="douban_moment">我的课程</string>
    <string name="timeline">主要</string>
    <string name="favorites">更多</string>
    <string name="info">信息</string>
    <string name="fab_description">选择一个特别日期</string>
    <string name="empty_content">噢，目前没有东西</string>
    <string name="login">登录</string>
    <string name="settings">个人信息</string>
    <string name="seat_select">点名</string>
    <string name="personal_Info">详细信息</string>
    <string name="submit_leave">提交请假条(4S)</string>
    <string name="confirmAndShow_leave">已提交的请假条(4S/T)</string>
    <string name="sendnoti">发送课程通知(4T)</string>
    <string name="submitcourse">提交课程(4T)</string>
    <string name="queryandselectcouse">查询并选课(4S)</string>
    <string name="logout">注销</string>
    <string name="queryselectcouse">查询已选课程信息(4S)</string>
    <string name="showStudentList">查看选择该课程的学生</string>
    <string name="showNotiList">查看该课程的通告</string>
    <string name="register_text">马上注册</string>
    <string name="returntohome_text">返回主页</string>
    <string name="findlostpassword_text">找回密码</string>
    <string name="login_text">登录</string>
    <string name="login_hint_text">账户名（由8-16位英文字母和数字组成）</string>
    <string name="password_hint_text">密码（由8-16位英文字母和数字组成）</string>
    <string name="password_confirm_hint_text">请再次输入您的密码</string>
    <string name="register_information_text">注册绑定</string>
    <string name="register_submit_text">提交</string>
    <string name="register_tip1_text">输入账户/密码，完成注册（仅限英文字母和数字）</string>
    <string name="register_tip2_text">选择教育信息</string>
    <string name="register_tv_school_text">韩山师范学院</string>
    <string name="register_tv_school0_text">学校</string>
    <string name="register_tv_faculty_text">教育学系</string>
    <string name="register_tv_year_text">2015</string>
    <string name="register_tv_position_text">学生</string>
    <string name="register_tv_degree_text">专科/本科</string>
    <string name="register_et_name_text">请输入您的真实姓名</string>
    <string name="register_et_studentnum_text">请输入您的学号</string>
    <string name="register_et_teachernum_text">请输入您的教师编号</string>
    <string name="register_et_classnum_text">请输入您的班级号</string>
    <string name="register_et_sex_text">男</string>
    <string name="register_tv_bottom0_text">已有账号，</string>
    <string name="register_tv_bottom1_text">点击去登录</string>
    <string name="set_question_answer">设置问题和答案用以找回密码和修改密码</string>
    <string name="register_list_view_tv_search_hint_text">请输入学校拼音前两个缩写</string>
    <string name="register_list_view_tv_tip_text">热门学校</string>
    <string name="userinformation_tv_name0_text">姓名</string>
    <string name="userinformation_tv_teachernum0_text">教师编号</string>
    <string name="userinformation_tv_studentnum0_text">学号</string>
    <string name="userinformation_tv_classnum0_text">班级编号</string>
    <string name="userinformation_tv_year0_text">入学年份</string>
    <string name="userinformation_tv_position0_text">职位</string>
    <string name="userinformation_tv_sex0_text">性别</string>
    <string name="userinformation_tv_degree0_text">学历</string>
    <string name="userinformation_tv_name_text">您的真实姓名</string>
    <string name="userinformation_tv_studentnum_text">您的学号</string>
    <string name="userinformation_tv_teachernum_text">您的教师编号</string>
    <string name="userinformation_tv_school0_text">学校</string>
    <string name="userinformation_tv_faculty0_text">院系</string>
    <string name="userinformation_tv_classnum_text">您的班级号</string>
    <string name="userinformation_tv_myinformation_text">我的资料</string>
    <string name="userinformation_tip_text">个人详细信息</string>
    <string name="tv_leave_teachername">教师姓名</string>
    <string name="tv_leave_teachername0">任课教师姓名</string>
    <string name="leave_title_text">提交请假信息</string>
    <string name="leave_submit_text">提交</string>
    <string name="leave_coursenum_text">课程编号</string>
    <string name="leave_coursenum0_text">点击选择课程编号</string>
    <string name="leave_contactphone_text">联系电话</string>
    <string name="leave_contactphone0_text">输入您的联系电话</string>
    <string name="leave_type_text">请假类型</string>
    <string name="leave_type0_text">选择请假类型</string>
    <string name="leave_reason_text">请假原因</string>
    <string name="leave_reason0_text">请输入简要的请假原因</string>
    <string name="leave_start_text">开始时间</string>
    <string name="leave_end_text">结束时间</string>
    <string name="leave_selectorder_text">点击选择节数</string>
    <string name="leave_selectdate_text">点击选择日期</string>
    <string name="tv_leaveshowtitle_text">请假条</string>
    <string name="tv_leave_show_title0_text">尊敬的老师：</string>
    <string name="tv_leave_show_title1_text">您好</string>
    <string name="tv_leave_content0_text">我因</string>
    <string name="tv_leave_show_content_text">请假内容</string>
    <string name="tv_leave_show_title2">无法按时上课，特此向您请假，请假时间</string>
    <string name="tv_leave_show_starttime">2015年9月12号</string>
    <string name="tv_leave_show_title3">第1节课到</string>
    <string name="tv_leave_show_tittle4">2015年9月12号第2节课。恳求您能批准！</string>
    <string name="tv_leave_show_end1">此致</string>
    <string name="tv_leave_show_end2">敬礼！</string>
    <string name="tv_leave_show_faculty">教育科学学院</string>
    <string name="tv_leave_show_classnum">20151911班</string>
    <string name="tv_leave_show_name">谭新奎</string>
    <string name="tv_leave_show_date">2015年9月12号</string>
    <string name="tv_leave_show_phone">点击联系学生</string>
    <string name="rb_show_leave_RBtn1">同意</string>
    <string name="rb_show_leave_RBtn2">拒绝</string>
    <string name="et_leave_show_message">教师留言</string>
    <string name="tv_leave_teachernum0">课程编号</string>
    <string name="tv_leave_teachernum">课程编号</string>
    <string name="tv_leave_show_stumun">2015191036</string>
    <string name="tv_leave_show_state">请求批准状态</string>
    <string name="tv_leave_show_submit">确认</string>
    <string name="sendnoti_title_text">课程通知</string>
    <string name="sendnoti_submit_text">发布</string>
    <string name="sendnoti_coursenum0_text">请输入课程编号</string>
    <string name="sendnoti_reason0_text">填写课程通知信息</string>
    <string name="sendnoti_selectdate_text">选择通知截止日期</string>
    <string name="sendnoti_selectorder_text">点击选择增加日期</string>
    <string name="sendtopic_title_text">课程讨论</string>
    <string name="sendtopic_submit_text">发布</string>
    <string name="sendtopic_coursenum0_text">请输入课程编号</string>
    <string name="sendtopic_reason0_text">填写课程讨论信息</string>
    <string name="sendtopic_selectdate_text">选择通知截止日期</string>
    <string name="sendtopic_selectorder_text">点击选择增加日期</string>
    <string name="seat_selection_prompt_available">可选</string>
    <string name="seat_selection_prompt_unavailable">不可选</string>
    <string name="seat_selection_prompt_selected">已选</string>
    <string name="seat_selection_bottom_bar_title">已选座位</string>
    <string name="seat_selection_bottom_bar_submit">确认座位</string>
    <string name="input_text">在此输入要翻译的文本...</string>
    <string name="copy_success">复制成功</string>
    <string name="input_empty">输入的文本为空</string>
    <string name="translate_title">译文</string>
    <string name="explains_title">详细译义</string>
    <string name="web_title">短语</string>
    <string name="share_choice">请选择要分享的应用</string>
    <string name="no_browser_found">No browser found</string>
    <string name="source_code_desc">https://github.com/zhaoweih/4S-T</string>
    <string name="contributors">https://github.com/zhaoweih/4S-T/graphs/contributors</string>
    <string name="sendto">mailto:zhaoweihao.dev@gmail.com</string>
    <string name="mail_topic">4ST Feedback / Advice</string>
    <string name="device_model">Device Version:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="no_mail_app">No email app found</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="contributors_backend">https://github.com/zhaoweih</string>
    <string name="version">Version:V1.0.0</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="showQuizList">查看答题排行榜</string>
    <string name="SendTopic">发布课程讨论</string>
    <string name="QueryTopic">查看课程讨论</string>
    <string name="time_selector">時間選擇器</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zxing_tip">请将二维码放入框内 即可自动扫描</string>
    <string name="zxing_title">扫一扫</string>
    <string name="zxing_manual_input">手动输入</string>
    <string name="zxing_album">相册</string>
    <string name="search_tip">搜索</string>
    <string name="course_button">课程</string>
    <string name="resource_button">资源</string>
    <string name="activity_button">活动</string>
    <string name="more_button">更多</string>
    <string name="recent_use">最近使用</string>
    <string name="recommend">推荐</string>
    <string name="recent_search">最近搜索</string>
    <string name="no_search_history">暂无搜索记录!</string>
    <string name="title_activity_main_search_all_resource">MainSearchAllResourceActivity</string>
    <string name="title_activity_note_search_all_resource">NoteSearchAllResourceActivity</string>
    <string name="message">信息</string>
    <string name="home">首页</string>
    <string name="title_activity_message_search_all_people">MessageSearchAllPeopleActivity</string>
    <string name="title_activity_main_more">MainMoreActivity</string>
    <string name="amm_tv_recommend">推荐</string>
    <string name="amm_tv_translator">翻译君</string>
    <string name="amm_tv_zhiHuDaily">知乎日报</string>
    <string name="title_activity_personal_setting">PersonalSettingActivity</string>
    <string name="aboutLightCourse">关于轻课</string>
    <string name="feedback">建议反馈</string>
    <string name="count_management">账号管理</string>
    <string name="modify_password">修改密码</string>
    <string name="title_activity_personal_setting_modify_password">PersonalSettingModifyPasswordActivity</string>
    <string name="confirm">确定</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="retype_new_password">确认新密码</string>
    <string name="title_activity_personal_setting_count_management">PersonalSettingCountManagementActivity</string>
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="description">描述</string>
    <string name="sex">性别</string>
    <string name="school">学校</string>
    <string name="phone">手机</string>
    <string name="exit">退出登录</string>
    <string name="unknown">未知</string>
    <string name="id">编号</string>
    <string name="title_activity_personal_setting_descriptoin">PersonalSettingDescriptoinActivity</string>
    <string name="title_activity_personal_setting_phone">PersonalSettingPhoneActivity</string>
    <string name="title_activity_home_course">HomeCourseActivity</string>
    <string name="collect">收藏</string>
    <string name="chat">聊天</string>
    <string name="share">转发</string>
    <string name="title_activity_home_course_detail_ativity">HomeCourseDetailAtivity</string>
    <string name="title_activity_home_course_detail_task">HomeCourseDetailTaskActivity</string>
    <string name="homework">作业</string>
    <string name="talk">讨论</string>
    <string name="exam">考试</string>
    <string name="slogan">让您的学习更轻松！</string>
    <string name="app_name_english">Easycourse</string>
    <string name="app_version">version 1.0.0</string>
</resources>