<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings"
        >
        <Preference
            android:title="@string/personal_Info"
            android:key="info1"/>

        <Preference
            android:title="@string/login"
            android:key="login"/>

        <Preference
            android:title="@string/logout"
            android:key="login"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="关于">
        <Preference
            android:title="@string/version"
            android:key="version"/>
        <Preference
            android:title="Why this App"
            android:key="why"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="贡献者">
        <Preference
            android:title="Android Client"
            android:key="contributors_android"
            android:summary="赵威豪&amp;谭新奎"
            />
        <Preference
            android:title="后端(Java)"
            android:key="contributors_backend"
            android:summary="赵威豪"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="支持">
        <Preference
            android:title="源代码"
            android:key="source"
            android:summary="@string/source_code_desc"
            />
        <Preference android:title="反馈bug / 建议"
            android:key="feedback"
            android:summary="帮助我们改进应用"/>
        <Preference android:title="赞赏"
            android:key="coffee"
            />
        <Preference android:title="开源许可证"
            android:key="open_source_license"/>
    </PreferenceCategory>
</PreferenceScreen>