<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".leave.LeaveShow">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ry_leaveshowmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="#fff">

        <RelativeLayout
            android:id="@+id/ry_leaveshowtitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff">

            <ImageView
                android:id="@+id/iv_leaveshowreturntohome"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/userinformationtitle" />

            <TextView
                android:id="@+id/tv_leaveshowtitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="#fff"
                android:gravity="center"
                android:text="@string/tv_leaveshowtitle_text"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bt_leaveshowsubmit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="#0000"
                android:src="@drawable/userinformationtitle"
                android:text="@string/tv_leave_show_submit"
                android:textColor="#00a2e9"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tv_leaveshowtop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ry_leaveshowtitle"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_leave_show_title0"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#fff"
                android:gravity="center|left"
                android:text="@string/tv_leave_show_title0_text" />

            <TextView
                android:id="@+id/tv_leave_show_title1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_leave_show_title0"
                android:layout_marginLeft="25dp"
                android:background="#fff"
                android:gravity="center|left"
                android:text="@string/tv_leave_show_title1_text" />

            <TextView
                android:id="@+id/tv_leave_content0"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_leave_show_title1"
                android:layout_marginLeft="25dp"
                android:background="#fff"
                android:visibility="gone"
                android:gravity="center|left"
                android:text="@string/tv_leave_content0_text" />

            <TextView
                android:id="@+id/tv_leave_show_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_leave_content0"
                android:gravity="left"
                android:text="@string/tv_leave_show_content_text"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_title2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_leave_show_content"
                android:layout_marginLeft="5dp"
                android:visibility="gone"
                android:gravity="center|left"
                android:text="@string/tv_leave_show_title2" />

            <TextView
                android:id="@+id/tv_leave_show_starttime"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_leave_show_content"
                android:layout_toRightOf="@id/tv_leave_show_title2"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/tv_leave_show_starttime"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_title3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_leave_show_starttime"
                android:background="#fff"
                android:gravity="center|left"
                android:visibility="gone"
                android:text="@string/tv_leave_show_title3"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_tittle4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_leave_show_starttime"
                android:layout_toRightOf="@id/tv_leave_show_title3"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/tv_leave_show_tittle4"
                android:textColor="#000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ry_leave_show_end0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_leaveshowtop">

            <TextView
                android:id="@+id/tv_leave_show_end1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="#fff"
                android:gravity="center|left"
                android:text="@string/tv_leave_show_end1" />

            <TextView
                android:id="@+id/tv_leave_show_end2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_leave_show_end1"
                android:layout_marginLeft="50dp"
                android:background="#0000"
                android:gravity="center|left"
                android:text="敬礼！"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_leave_show_faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_leave_show_end2"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:text="@string/tv_leave_show_faculty"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_classnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_leave_show_faculty"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:text="@string/tv_leave_show_classnum"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_leave_show_classnum"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:text="@string/tv_leave_show_name"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_stumun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_leave_show_name"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:text="@string/tv_leave_show_stumun"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_leave_show_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_leave_show_stumun"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:text="@string/tv_leave_show_phone"
                android:textColor="#000" />

            <RadioGroup
                android:id="@+id/rg_show_leave_rBtnGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_leave_show_phone"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_show_leave_RBtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_show_leave_RBtn1" />

                <RadioButton
                    android:id="@+id/rb_show_leave_RBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_show_leave_RBtn2" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_leave_show_message"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/rg_show_leave_rBtnGrp"
                android:background="#0000"
                android:gravity="center"
                android:hint="@string/et_leave_show_message"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_leave_show_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/et_leave_show_message"
                android:layout_marginRight="20dp"
                android:textColor="#00a2e9"
                android:text="@string/tv_leave_show_state"
                />
            <TextView
                android:id="@+id/tv_leave_show_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_leave_show_state"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:text="@string/tv_leave_show_state"
                />
        </RelativeLayout>


    </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.constraint.ConstraintLayout>